Enhance index.html with research and cinema sections
Added new sections for research and cinema observations with detailed descriptions.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,48 @@
   <title>Japo | Personal Page</title>
 </head>
 <body>
-  <h1>Japo</h1>
-  <p>Physics · Econophysics · Mathematical Finance</p>
 
-  <h2>Research</h2>
-  <p>Work in progress.</p>
+  <div class="container">
+    <div class="card">
 
-  <h2>Cinema & Series</h2>
-  <p>Notes and observations.</p>
+      <div class="ribbon">
+        Quant Finance · Research Notes · Cinema Observations
+      </div>
+
+      <div class="content">
+        <h1>Japo</h1>
+        <p class="tagline">Physics · Econophysics · Applied Mathematics for Finance</p>
+
+        <div class="section">
+          <h2>Research</h2>
+          <p>
+            This page documents my ongoing scientific work in market structure, correlation patterns,
+            eigenvalue analysis, and quantitative modeling.
+          </p>
+          <div class="note">
+            <strong>Current focus:</strong> Market States, correlation matrices, and robust clustering pipelines.
+          </div>
+        </div>
+
+        <div class="section">
+          <h2>Cinema & Series</h2>
+          <p>
+            Personal observations on films and series: narrative structure, motifs, and emotional resonance.
+          </p>
+          <div class="note">
+            <strong>Writing style:</strong> concise notes, theme tracking, and scene-level insights.
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <div class="footerLine"></div>
+        © 2026 — Personal page
+      </footer>
+
+    </div>
+  </div>
+
 </body>
+
 </html>
