--- a/index.html
+++ b/index.html
@@ -18,30 +18,35 @@
       </div>
 
       <div class="content">
-        <h1>Japo</h1>
-        <p class="tagline">Physics · Econophysics · Applied Mathematics for Finance</p>
+       <h1>Javier Gómez Morales</h1>
 
-        <div class="section">
-          <h2>Research</h2>
-          <p>
-            This page documents my ongoing scientific work in market structure, correlation patterns,
-            eigenvalue analysis, and quantitative modeling.
-          </p>
-          <div class="note">
-            <strong>Current focus:</strong> Market States, correlation matrices, and robust clustering pipelines.
-          </div>
-        </div>
+<p class="tagline">
+Research · Undergraduate Thesis
+</p>
 
-        <div class="section">
-          <h2>Cinema & Series</h2>
-          <p>
-            Personal observations on films and series: narrative structure, motifs, and emotional resonance.
-          </p>
-          <div class="note">
-            <strong>Writing style:</strong> concise notes, theme tracking, and scene-level insights.
-          </div>
-        </div>
-      </div>
+<div class="section">
+  <h2>Welcome</h2>
+  <p>
+    I am a physicist from UNAM, México.<br>
+    I am currently studying the Master’s degree in Mathematical Sciences at UNAM.
+  </p>
+</div>
+
+<div class="section">
+  <h2>Research</h2>
+  <p>
+    Undergraduate Thesis.
+  </p>
+</div>
+
+<div class="section">
+  <h2>Cinema &amp; Series</h2>
+  <p>
+    Observations on my favourite movies and television series.<br>
+    Notes from a fan’s perspective.
+  </p>
+</div>
+ </div>
 
       <footer>
         <div class="footerLine"></div>
