--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
       <div class="content">
        <h1>Javier Gómez Morales</h1>
+<nav class="topNav">
+  <a class="navItem" href="research.html">Research</a>
+  <a class="navItem" href="cinema.html">Cinema &amp; Series</a>
+</nav>
 
 <p class="tagline">
 Research · Undergraduate Thesis
