--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@ Research · Undergraduate Thesis
 
 <div class="section">
   <h2>Welcome</h2>
-  <p>
-    I am a physicist from UNAM, México.<br>
-    I am currently studying the Master’s degree in Mathematical Sciences at UNAM.
-  </p>
+  <div class="welcomeBox">
+    <p>
+      I am a physicist from UNAM, México.<br>
+      I am currently studying the Master’s degree in Mathematical Sciences at UNAM.
+    </p>
+  </div>
 </div>
+
 
 <div class="section">
   <h2>Research</h2>
