--- a/index.html
+++ b/index.html
@@ -12,10 +12,45 @@
 
   <div class="container">
     <div class="card">
+<div class="ribbon">
+  Quant Finance · Research Notes · Cinema Observations
+</div>
 
-      <div class="ribbon">
-        Quant Finance · Research Notes · Cinema Observations
-      </div>
+<div class="hero">
+  <h1 class="name">Javier Gómez Morales</h1>
+  <p class="subtitle">Physics · Econophysics · Applied Mathematics for Finance</p>
+
+  <div class="introPlate">
+    <p>
+      I am a physicist from UNAM, México.<br>
+      I am currently studying the Master’s degree in Mathematical Sciences at UNAM.
+    </p>
+  </div>
+</div>
+
+<div class="homeDivider"></div>
+
+<div class="linkGrid">
+  <a class="linkCard" href="research.html">
+    <div class="linkTitle">Research</div>
+    <p class="linkText">
+      Undergraduate Thesis (Undergraduate Thesis) · Quant notes · Methods, figures, and ongoing work.
+    </p>
+  </a>
+
+  <a class="linkCard" href="cinema.html">
+    <div class="linkTitle">Cinema &amp; Series</div>
+    <p class="linkText">
+      Observations on my favourite movies and television series — notes from a fan’s perspective.
+    </p>
+  </a>
+</div>
+
+<footer>
+  <div class="footerLine"></div>
+  © 2026 — Personal page
+</footer>
+</div>
 
       <div class="content">
        <h1>Javier Gómez Morales</h1>
