Update personal information and structure in index.html

--- a/index.html
+++ b/index.html
@@ -1,95 +1,66 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&family=Source+Serif+4:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Japo | Personal Page</title>
+  <title>Javier Gómez Morales | Personal Page</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&family=Source+Serif+4:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+
+  <!-- Main stylesheet -->
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <div class="container">
     <div class="card">
-<div class="ribbon">
-  Quant Finance · Research Notes · Cinema Observations
-</div>
 
-<div class="hero">
-  <h1 class="name">Javier Gómez Morales</h1>
-  <p class="subtitle">Physics · Econophysics · Applied Mathematics for Finance</p>
+      <!-- Top ribbon -->
+      <div class="ribbon">
+        Quant Finance · Research Notes · Cinema Observations
+      </div>
 
-  <div class="introPlate">
-    <p>
-      I am a physicist from UNAM, México.<br>
-      I am currently studying the Master’s degree in Mathematical Sciences at UNAM.
-    </p>
-  </div>
-</div>
+      <!-- Hero section -->
+      <div class="hero">
+        <h1 class="name">Javier Gómez Morales</h1>
+        <p class="subtitle">Physics · Econophysics · Applied Mathematics for Finance</p>
 
-<div class="homeDivider"></div>
+        <div class="introPlate">
+          <p>
+            I am a physicist from UNAM, México.<br>
+            I am currently studying the Master’s degree in Mathematical Sciences at UNAM.
+          </p>
+        </div>
+      </div>
 
-<div class="linkGrid">
-  <a class="linkCard" href="research.html">
-    <div class="linkTitle">Research</div>
-    <p class="linkText">
-      Undergraduate Thesis (Undergraduate Thesis) · Quant notes · Methods, figures, and ongoing work.
-    </p>
-  </a>
+      <!-- Divider -->
+      <div class="homeDivider"></div>
 
-  <a class="linkCard" href="cinema.html">
-    <div class="linkTitle">Cinema &amp; Series</div>
-    <p class="linkText">
-      Observations on my favourite movies and television series — notes from a fan’s perspective.
-    </p>
-  </a>
-</div>
+      <!-- Main navigation cards -->
+      <div class="linkGrid">
 
-<footer>
-  <div class="footerLine"></div>
-  © 2026 — Personal page
-</footer>
-</div>
+        <a class="linkCard" href="research.html">
+          <div class="linkTitle">Research</div>
+          <p class="linkText">
+            Licenciatura (Undergraduate Thesis) · Quantitative finance ·
+            Methods, figures, and ongoing research work.
+          </p>
+        </a>
 
-      <div class="content">
-       <h1>Javier Gómez Morales</h1>
-<nav class="topNav">
-  <a class="navItem" href="research.html">Research</a>
-  <a class="navItem" href="cinema.html">Cinema &amp; Series</a>
-</nav>
+        <a class="linkCard" href="cinema.html">
+          <div class="linkTitle">Cinema &amp; Series</div>
+          <p class="linkText">
+            Observations on my favourite movies and television series —
+            notes from a fan’s perspective.
+          </p>
+        </a>
 
-<p class="tagline">
-Research · Undergraduate Thesis
-</p>
+      </div>
 
-<div class="section">
-  <h2>Welcome</h2>
-  <div class="welcomeBox">
-    <p>
-      I am a physicist from UNAM, México.<br>
-      I am currently studying the Master’s degree in Mathematical Sciences at UNAM.
-    </p>
-  </div>
-</div>
-
-
-<div class="section">
-  <h2>Research</h2>
-  <p>
-    Undergraduate Thesis.
-  </p>
-</div>
-
-<div class="section">
-  <h2>Cinema &amp; Series</h2>
-  <p>
-    Observations on my favourite movies and television series.<br>
-    Notes from a fan’s perspective.
-  </p>
-</div>
- </div>
-
+      <!-- Footer -->
       <footer>
         <div class="footerLine"></div>
         © 2026 — Personal page
@@ -99,5 +70,4 @@ Research · Undergraduate Thesis
   </div>
 
 </body>
-
 </html>
