--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&family=Source+Serif+4:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -34,6 +36,22 @@
             I am currently studying the Master’s degree in Mathematical Sciences at UNAM.
           </p>
         </div>
+        <div class="socialBar">
+        <a href="mailto:japogm@ciencias.unam.mx" aria-label="Email">
+          <i class="fa-solid fa-envelope"></i>
+          <span>japogm@ciencias.unam.mx</span>
+        </a>
+      
+        <a href="https://x.com/Japogm" target="_blank" aria-label="X (Twitter)">
+          <i class="fa-brands fa-x-twitter"></i>
+          <span>@Japogm</span>
+        </a>
+      
+        <a href="https://www.instagram.com/Japogm" target="_blank" aria-label="Instagram">
+          <i class="fa-brands fa-instagram"></i>
+          <span>@Japogm</span>
+        </a>
+      </div>
       </div>
 
       <!-- Divider -->
