--- a/research.html
+++ b/research.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Research | Javier Gómez Morales</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 </head>
 <body>
   <div class="container">
@@ -41,9 +43,29 @@
       </div>
 
       <footer>
-        <div class="footerLine"></div>
-        <a href="index.html">Back to Home</a>
-      </footer>
+
+  <div class="footerLine"></div>
+
+  <div class="footerSocial">
+    <a href="mailto:japogm@ciencias.unam.mx">
+      <i class="fa-solid fa-envelope"></i>
+      <span>japogm@ciencias.unam.mx</span>
+    </a>
+
+    <a href="https://x.com/Japogm" target="_blank">
+      <i class="fa-brands fa-x-twitter"></i>
+      <span>@Japogm</span>
+    </a>
+
+    <a href="https://www.instagram.com/Japogm" target="_blank">
+      <i class="fa-brands fa-instagram"></i>
+      <span>@Japogm</span>
+    </a>
+  </div>
+
+  <p class="footerCopy">© 2026 — Personal page</p>
+
+</footer>
 
     </div>
   </div>
