Refine text in research.html for clarity
Updated text for clarity and consistency in the research section and footer.

--- a/research.html
+++ b/research.html
@@ -3,71 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <title>Research | Javier Gómez Morales</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
+  <!-- Main stylesheet -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
+
 <body>
+
   <div class="container">
     <div class="card">
+
+      <!-- Top ribbon -->
       <div class="ribbon">
         Research · Quant Finance · Notes
       </div>
 
+      <!-- Main content -->
       <div class="content">
+
         <h1>Research</h1>
 
+        <!-- Navigation -->
         <nav class="topNav">
           <a class="navItem" href="index.html">Home</a>
           <a class="navItem" href="cinema.html">Cinema &amp; Series</a>
         </nav>
 
+        <!-- Section: Thesis -->
         <div class="section">
           <h2>Undergraduate Thesis</h2>
           <p>
-            Summary, figures, and ongoing refinements will live here.
+            This section documents my undergraduate thesis work, including
+            summaries, figures, and ongoing refinements.
           </p>
+
           <div class="note">
-            <strong>Status:</strong> building a clean public record of results and methodology.
+            <strong>Status:</strong>
+            Building a clean and public record of results, methods, and interpretations.
           </div>
         </div>
 
+        <!-- Section: Interests -->
         <div class="section">
           <h2>Current Interests</h2>
           <ul>
             <li>Market states and correlation structure</li>
-            <li>Eigenvalue/eigenvector analysis</li>
-            <li>Clustering and robust pipelines</li>
+            <li>Eigenvalue and eigenvector analysis</li>
+            <li>Clustering methods and robust pipelines</li>
           </ul>
         </div>
+
       </div>
 
+      <!-- Footer (same as Home) -->
       <footer>
 
-  <div class="footerLine"></div>
+        <div class="footerLine"></div>
 
-  <div class="footerSocial">
-    <a href="mailto:japogm@ciencias.unam.mx">
-      <i class="fa-solid fa-envelope"></i>
-      <span>japogm@ciencias.unam.mx</span>
-    </a>
+        <div class="footerSocial">
+          <a href="mailto:japogm@ciencias.unam.mx">
+            <i class="fa-solid fa-envelope"></i>
+            <span>japogm@ciencias.unam.mx</span>
+          </a>
 
-    <a href="https://x.com/Japogm" target="_blank">
-      <i class="fa-brands fa-x-twitter"></i>
-      <span>@Japogm</span>
-    </a>
+          <a href="https://x.com/Japogm" target="_blank">
+            <i class="fa-brands fa-x-twitter"></i>
+            <span>@Japogm</span>
+          </a>
 
-    <a href="https://www.instagram.com/Japogm" target="_blank">
-      <i class="fa-brands fa-instagram"></i>
-      <span>@Japogm</span>
-    </a>
-  </div>
+          <a href="https://www.instagram.com/Japogm" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+            <span>@Japogm</span>
+          </a>
+        </div>
 
-  <p class="footerCopy">© 2026 — Personal page</p>
+        <p class="footerCopy">© 2026 — Personal page</p>
 
-</footer>
+      </footer>
 
     </div>
   </div>
+
 </body>
 </html>
+
