--- a/cinema.html
+++ b/cinema.html
@@ -2,46 +2,104 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cinema & Series | Javier Gómez Morales</title>
+  <title>Cinema &amp; Series | Javier Gómez Morales</title>
+
+  <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
+
 <body>
+
   <div class="container">
     <div class="card">
+
+      <!-- Top ribbon -->
       <div class="ribbon">
-        Cinema &amp; Series · Fan Notes
+        Cinema &amp; Series · Fan Notes · Observations
       </div>
 
+      <!-- Main content -->
       <div class="content">
+
         <h1>Cinema &amp; Series</h1>
 
+        <!-- Navigation -->
         <nav class="topNav">
           <a class="navItem" href="index.html">Home</a>
           <a class="navItem" href="research.html">Research</a>
         </nav>
 
+        <!-- Section: Intro -->
         <div class="section">
           <h2>About these notes</h2>
           <p>
-            Observations on my favourite movies and television series.
-            Notes from a fan’s perspective, with attention to narrative structure and motifs.
+            This page collects observations on my favourite movies and television series.
+            These are notes from a fan’s perspective, focusing on narrative structure,
+            themes, character dynamics, and emotional resonance.
           </p>
-        </div>
 
-        <div class="section">
-          <h2>Recent Notes</h2>
           <div class="note">
-            <strong>Coming soon:</strong> short entries with date, title, and a few key observations.
+            <strong>Format:</strong> short entries with date, title, and a few focused observations.
           </div>
         </div>
+
+        <!-- Section: Recent notes (placeholder) -->
+        <div class="section">
+          <h2>Recent Notes</h2>
+          <ul>
+            <li><em>Coming soon:</em> a first set of entries and a simple indexing system.</li>
+            <li>Films — concise notes with themes and key scenes.</li>
+            <li>Series — season-level observations and standout episodes.</li>
+          </ul>
+        </div>
+
+        <!-- Section: Quick index (placeholder) -->
+        <div class="section">
+          <h2>Quick Index</h2>
+          <p>
+            Suggested structure (you can expand later):
+          </p>
+          <ul>
+            <li><strong>Films:</strong> by year or by director</li>
+            <li><strong>Series:</strong> by genre or by platform</li>
+            <li><strong>Tags:</strong> love, memory, time, loneliness, ambition, etc.</li>
+          </ul>
+        </div>
+
       </div>
 
+      <!-- Footer (same as Home / Research) -->
       <footer>
+
         <div class="footerLine"></div>
-        <a href="index.html">Back to Home</a>
+
+        <div class="footerSocial">
+          <a href="mailto:japogm@ciencias.unam.mx">
+            <i class="fa-solid fa-envelope"></i>
+            <span>japogm@ciencias.unam.mx</span>
+          </a>
+
+          <a href="https://x.com/Japogm" target="_blank">
+            <i class="fa-brands fa-x-twitter"></i>
+            <span>@Japogm</span>
+          </a>
+
+          <a href="https://www.instagram.com/Japogm" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+            <span>@Japogm</span>
+          </a>
+        </div>
+
+        <p class="footerCopy">© 2026 — Personal page</p>
+
       </footer>
 
     </div>
   </div>
+
 </body>
 </html>
+
