--- a/cinema.html
+++ b/cinema.html
@@ -56,18 +56,18 @@
           </ul>
         </div>
 
-        <!-- Section: Quick index (placeholder) -->
-        <div class="section">
-          <h2>Quick Index</h2>
-          <p>
-            Suggested structure (you can expand later):
-          </p>
-          <ul>
-            <li><strong>Films:</strong> by year or by director</li>
-            <li><strong>Series:</strong> by genre or by platform</li>
-            <li><strong>Tags:</strong> love, memory, time, loneliness, ambition, etc.</li>
-          </ul>
-        </div>
+      <!-- Section: Series -->
+  <div class="section">
+    <h2>Series</h2>
+    <ul>
+    <li>
+      <a href="cinema/series/perchance-to-dream.html">
+        <em>Batman: The Animated Series</em> — Perchance to Dream
+        (Season 2 Episode 2)
+      </a>
+    </li>
+    </ul>
+  </div>
 
       </div>
 
