Add publication date to Perchance to Dream

--- a/cinema/series/perchance-to-dream.html
+++ b/cinema/series/perchance-to-dream.html
@@ -21,6 +21,9 @@
 
         <h1>Perchance to Dream</h1>
 
+        <!FECHA>
+        <p class="meta">Published: 2026-01-08</p>
+        
         <p class="subtitle">
           <em>Batman: The Animated Series</em> · Season 2 Episode 2 · 1992
         </p>
