Update publication date and spoiler note

--- a/cinema/series/perchance-to-dream.html
+++ b/cinema/series/perchance-to-dream.html
@@ -21,15 +21,12 @@
 
         <h1>Perchance to Dream</h1>
 
-        <!FECHA>
-        <p class="meta">Published: 2026-01-08</p>
+       <p class="meta">
+        Published: 2026-01-03 · Spoiler note: This post contains spoilers for the episode.
+      </p>
         
         <p class="subtitle">
           <em>Batman: The Animated Series</em> · Season 2 Episode 2 · 1992
-        </p>
-
-        <p class="meta">
-          Spoiler note: This post contains spoilers for the episode.
         </p>
 
         <nav class="topNav">
